wada-ama-testcenter-web-57718053929f/wada-ama-testcenter-web-57718053929f/kubernetes/base/service-sm.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-management-service
  namespace: default
  labels:
    app: sample-management-api
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/protocol: https
    konghq.com/plugins: testcenter-web-cors-plugin, testcenter-web-openid-connect-plugin, sample-management-response-transformer
spec:
  type: ExternalName
  externalName: localhost
  ports:
  - port: 443
