wada-ama-testcenter-web-57718053929f/wada-ama-testcenter-web-57718053929f/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testcenter-web-service
  namespace: default
  annotations:
    konghq.com/protocol: https
    konghq.com/path: /ng
    konghq.com/plugins: testcenter-web-cors-plugin, testcenter-web-openid-connect-plugin
spec:
  type: NodePort
  selector:
    app: testcenter-web
  ports:
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 4200
