wada-ama-testcenter-web-57718053929f/wada-ama-testcenter-web-57718053929f/kubernetes/base/ingress-sm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-management-ingress
  namespace: default
  annotations:
    konghq.com/protocol: "https"
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
spec:
  ingressClassName: kong
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /sm
        pathType: ImplementationSpecific
        backend:
          service:
            name: sample-management-service
            port:
              number: 443
